<resources>
    <string name="app_name">InstagramClone</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">0ytTqpUCJeSs3LFhGsQYMpBlmxQr6JXIqEN2Bpkf</string>
    <string name="back4app_client_key">zl3Vr8G3MxLXfLzFfEWZf2jJJyT8h473lHA4b2Ok</string>

    <string name="name">Please Enter Name Of KickBoxer</string>
    <string name="email">Please Enter Your Email</string>
    <string name="username">Please Enter Your UserName</string>
    <string name="password">Please Enter Your Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>